--- a/style.css
+++ b/style.css
@@ -71,7 +71,9 @@ label{
     "i la a"
     "i lpr p"
     "i lr r"
-    "i lpark park";
+    "i park c"
+    "i e e"
+    "i e e";
     box-shadow: 1px 1px 3px #0a1612;
     margin: 20px;
     padding: 20px;
@@ -118,6 +120,10 @@ button:active{background-color: #443729;}
     grid-area: la;
 }
 
+.result>.extras{
+    grid-area: e;
+}
+
 .result>.l-price{
     grid-area: lpr;
 }
@@ -128,6 +134,11 @@ button:active{background-color: #443729;}
 
 .result>.l-park{
     grid-area: lpark;
+}
+
+.result>.contact{
+    grid-area: c;
+    font-size: 80% ;
 }
 
 .result>.l-immediate{}
